blog project posting

--- a/_posts/2023-12-05-linux1.md
+++ b/_posts/2023-12-05-linux1.md
@@ -3,15 +3,16 @@ layout: single
 title:  "ch1. 리눅스 명령 사용"
 categories: linux
 tag:
-toc: true
 author_profile: false
+toc: true
 ---
 
 
 # 1. 리눅스 명령 사용
 
 ## 프롬포트 기호와 홈 디렉터리
-### 프롬프트
+
+프롬프트
 - 사용자의 명령 입력을 기다리는 표시
 - 셸(Shell)에 따라 다르게 나타남 `배시 셸의 경우 $로, 시스템 관리자는 #로 표시`
 
@@ -22,7 +23,7 @@ author_profile: false
 - `user1@myubuntu:~$` 설명
 -> `user1`은 사용자 계정, `myubuntu`는 우분투 리눅스가 설치된 컴퓨터 이름
 
-### 명령 행 편집 방법
+명령 행 편집 방법
 - 프롬프트 다음에 명령을 입력
 - 한 문자 지우기: `백스페이스키`나 `Delete` 키를 사용 
 - 한 단어 지우기: `Ctrl+w` (단어는 공백 문자로 구분)
