--- a/_posts/2023-12-07-linux3.md
+++ b/_posts/2023-12-07-linux3.md
@@ -9,25 +9,25 @@ author_profile: false
 
 # 1. 리눅스의 문서 편집기
 
-### 리눅스 편집기 종류
+## 리눅스 편집기 종류
 - 행 단위 편집기(라인 편집기), 화면 단위 편집기
 
-### 행 단위 편집기 (Unix 부터 사용)
+## 행 단위 편집기 (Unix 부터 사용)
 - `ed, ex, sed`
 
-### 화면 단위 편집기 (Unix 부터 사용)
+## 화면 단위 편집기 (Unix 부터 사용)
 - `vi(vim)` : 리눅스(유닉스)에서 일반적으로 사용할 수 있는 화면 편집기 - vim 은 전부 있다(별도 설치 X)
 - `emacs` : 가장 강력한 기능을 제공하지만 사용법이 어렵고 복잡하여 전문적인 애호가 위주 사용(별도 설치 필요)
 - `nano` : 리눅스에서 일반적으로 사용 가능하며 초기에 사용하기가 `vi/emacs`보다 매우 편리(윈도우 노트패드 비슷)
 - `gedit` : 리눅스 GUI 기반의 편집기로 편리하며 마우스 사용 가능(누구나 사용 가능) - Ubuntu 에서 사용 가능
 
-### 모드 형과 비모드형 편집기
-#### 모드(mode)형 편집기 (입력모드와 명령모드 구분)
+## 모드 형과 비모드형 편집기
+### 모드(mode)형 편집기 (입력모드와 명령모드 구분)
 - `입력모드` : 텍스트를 입력할 수 있는 모드
 - `명령모드` : 텍스트 수정, 삭제, 복사와 붙이기 등을 수행하는 편집 명령 모드
 - vi(vim)은 모드형 편집기
 
-#### 비모드형 편집기 (입력모드와 명령모드 구분이 없음)
+### 비모드형 편집기 (입력모드와 명령모드 구분이 없음)
 - 입력모드와 명령모드가 구분되어 있지 않음
 - 편집 명령이 `Ctrl` 이나 `Alt` 같은 특수 키와 함께 사용
 - nano, gedit, 아래한글, 워드, 메모장은 비모드형 편집기
@@ -35,9 +35,9 @@ author_profile: false
 ---
 
 # 2. vi 사용법
-### vi의 동작 모드 (명령모드, 입력모드, 마지막행모드)
+## vi의 동작 모드 (명령모드, 입력모드, 마지막행모드)
 
-### vi 시작하고 종료하기
+## vi 시작하고 종료하기
 vi 시작
 - 파일이름 지정할 경우: 해당 파일이 있으면 그 파일이 열리고, 없는 파일이면 빈 파일이 열림
 - 파일이름 지정하지 않을 경우: 그냥 빈 파일이 열림(파일명은 저장할 때 지정 가능)
@@ -607,7 +607,7 @@ $
 
 ---
 
-# 요약
+## 요약
 - vi 동작모드 (`명령 모드, 입력 모드, 마지막행 모드`)
 - vi 명령 (`모드 전환, 커서 이동, 화면 이동, 수정/삭제, 복사, 잘라내기, 붙이기, 검색, 바꾸기, 기타 명령`)
 - vi 환경 설정 (`명령모드에서, .exrc 파일 생성, 환경변수 EXINIT 이용` )
