--- a/_posts/2023-12-08-linux4.md
+++ b/_posts/2023-12-08-linux4.md
@@ -9,7 +9,7 @@ author_profile: false
 
 # 1. 셸의 기능과 종류
 
-### 셸(shell)의 기능
+## 셸(shell)의 기능
 - 명령어 해석 기능, 프로그래밍 기능, 사용자 환경 설정 기능
 
 ## 명령어 해석 기능
@@ -288,7 +288,7 @@ $ cat out3
 
 ---
 
-# 4. 배시 셸 환경 설정
+## 4. 배시 셸 환경 설정
 
 ### 셸 변수와 환경 변수
 - 사용자마다 원하는 셸 환경을 설정하기 위하여 셸 변수와 환경 변수 설정
@@ -357,8 +357,8 @@ $ unset SOME2
 
 ---
 
-# 5. 에일리어스와 히스토리
-## 에일리어스 (alias)
+## 5. 에일리어스와 히스토리
+### 에일리어스 (alias)
 - 에일리어스는 우리말로 '별명'을 의미
 - 기존의 명령어를 대신하여 다른 이름(별명)을 붙일 수 있도록 하는 기능
 - alias를 사용하여 긴 명령 대신 짧은 명령을 만들어 사용 가능
@@ -429,7 +429,7 @@ $ !ls
 ---
 
 
-# 6. 프롬프트 설정
+## 6. 프롬프트 설정
 
 ### bash 셸은 셸변수 PS1에 현재 사용자가 사용하는 프롬프트가 설정
 - 현재 프롬포트 설정 내용 확인
@@ -455,7 +455,7 @@ $ PS1=$MYPROMPT
 
 ---
 
-# 요약
+## 요약
 - 셸의 기능 (`명령어 해석, 프로그래밍, 사용자 환경 설정`)
 - 셸의 종류 (`본 셸, 콘 셸, C 셸, 배시 셸, 대시 셸`)
 - 셸 기본 사용법 (`로그인 셸과 서브 셸, 출력명령 사용, 특수문자 사용`)
