--- a/_posts/2023-12-09-linux5.md
+++ b/_posts/2023-12-09-linux5.md
@@ -8,7 +8,7 @@ author_profile: false
 
 # 1. 파일의 속성
 
-### 파일 접근 권한 보호
+## 파일 접근 권한 보호
 - 리눅스는 파일에 무단으로 접근하는 것을 방지하고 보호하는 기능을 제공
 - 사용자는 자신의 파일과 디렉터리 중에서 다른 사용자가 접근해도 되는 것과 그렇지 않은 것을 구분하여 접근 권한을 제한
 
@@ -110,7 +110,7 @@ $ file /home/user1
 ---
 
 
-# 3. 기호를 이용한 파일 접근 권한 변경
+## 3. 기호를 이용한 파일 접근 권한 변경
 
 ### 기호 모드
 `chmod a+rwx test.txt`
@@ -121,7 +121,7 @@ $ file /home/user1
 
 
 
-#### 기호 모드에서 사용하는 문자와 기호
+### 기호 모드에서 사용하는 문자와 기호
 
 
 
@@ -167,7 +167,7 @@ $ file /home/user1
 
 ---
 
-# 4. 숫자를 이용한 파일 접근 권한 변경
+## 4. 숫자를 이용한 파일 접근 권한 변경
 - 전체 권한을 숫자 표기
 ```
 rwx         r-         xr--
@@ -269,7 +269,7 @@ drwxrwxrwt 21 root root 4096 11월 17 13:36 /tmp
 
 ---
 
-# 요약
+## 요약
 - 파일의 속성
 	- `-rw-r--r-- 1 root root 223 11월 8 23:13 /etc/hosts`
 - 파일의 접근 권한
