--- a/_posts/2023-12-11-linux7.md
+++ b/_posts/2023-12-11-linux7.md
@@ -8,7 +8,7 @@ author_profile: false
 
 # 1. 리눅스 파일 시스템의 종류
 
-### 파일 시스템
+## 파일 시스템
 - 파일과 디렉터리 집합을 구조적으로 관리하는 체계
 - 다양한 형식의 파일 시스템 존재(FAT, NTFS, EXT, 등)
 
@@ -161,7 +161,7 @@ nodev	autofs
 ---
 
 
-# 3. 파일 시스템 마운트
+## 3. 파일 시스템 마운트
 ### 마운트
 - 파일 시스템을 디렉터리 계층 구조의 특정 디렉터리와 연결하는 것
 
