--- a/_posts/2023-12-12-linux8.md
+++ b/_posts/2023-12-12-linux8.md
@@ -207,7 +207,7 @@ $ ls -l /home/user1/linux_ex/ch7/hd1
 
 ---
 
-# 5. 디스크 관리
+## 5. 디스크 관리
 
 ### 파일 시스템 별 디스크의 남은 공간 확인하기 (`df (disk free)`)
 
@@ -331,7 +331,7 @@ $ sudo fsck -f /dev/sdb2
 
 
 ---
-# 요약
+## 요약
 - 리눅스 파일시스템 종류 (`ext`, `ext2` ,`ext3` ,`ext4`)
 - 리눅스 파일시스템 구조 (`ext4 구조`, `파일시스템과 디렉터리 계층`)
 - 파일시스템 마운트 (`USB 메모리 연결하기`)
