--- a/_posts/2023-12-13-linux9.md
+++ b/_posts/2023-12-13-linux9.md
@@ -8,7 +8,7 @@ author_profile: false
 
 # 1. 우분투 패키지 개요
 
-### 리눅스에서 주로 사용하는 SW 패키지
+## 리눅스에서 주로 사용하는 SW 패키지
 - `deb` : 데비안, 우분투 계열에서 사용하는 패키지
 - `RPM(Redhat Package Manager)` : 레드햇 계열 리눅스에서 주로 사용
 
@@ -222,7 +222,7 @@ $ bunzip2 ch2.tar.bz2
 
 ---
 
-# 4. 소프트웨어 컴파일
+## 4. 소프트웨어 컴파일
 ### 직접 소스를 컴파일하여 소프트웨어를 설치해야 하는 경우가 있음
 ### 컴파일러 설치하기
 - C 언어로 작성한 프로그램을 컴파일하기 위해서는 C 컴파일러가 필요
@@ -329,7 +329,7 @@ $ ./run
 
 
 ---
-# 요약
+## 요약
 - 우분투 SW 패키지 개요 (`deb 패키지`)
 - 우분투 패키지 관리 및 설치 (`apt-cache, apt-get`)
 - 파일 아카이브와 압축 (`tar, gzip, gunzip, zcat, bzip2, bunzip2, bzcat`)
