--- a/_posts/2023-12-14-linux10.md
+++ b/_posts/2023-12-14-linux10.md
@@ -6,7 +6,7 @@ toc: true
 author_profile: false
 ---
 
-# 1. 사용자 계정 관련 파일
+## 1. 사용자 계정 관련 파일
 
 ### 사용자 관리
 - 리눅스는 다중 사용자 시스템이므로 사용자를 구별하고 사용자에게 적절한 자원을 할당해주는 방법이 필요
@@ -108,7 +108,7 @@ author_profile: false
 
 ---
 
-# 2. 사용자 계정 관리 명령
+## 2. 사용자 계정 관리 명령
 
 ### `useradd, adduser` -사용자 계정 생성하기
 
@@ -210,7 +210,7 @@ user1 user3 user4
 
 ---
 
-# 3.  그룹 관리 명령
+## 3.  그룹 관리 명령
 ### `groupadd, addgroup` -그룹 생성하기
 
 |`groupadd`|
@@ -405,7 +405,7 @@ $ id
 
 ---
 
-# 4. 사용자 정보 관리 명령
+## 4. 사용자 정보 관리 명령
 
 ### `UID`와 `EUID` (`Effective UID`)
 - `UID`는 사용자가 로그인 할 때 사용한 계정의 ID를 의미
@@ -676,7 +676,7 @@ temp:
 
 ---
 
-# 요약
+## 요약
 - 사용자 계정 관련 파일 (`/etc/passwd`, `/etc/shadow`, `/etc/group`, `/etc/shadow`, `/etc/login.defs`)
 - 사용자 계정 관리 명령 (`useradd`, `adduser`, `usermod`, `userdel`)
 - 그룹 관리 명령 (`groupadd`, `addgroup`, `groupmod`, `groupdel`, `gpasswd`, `newgrp`)
