--- a/_posts/2023-12-15-linux11.md
+++ b/_posts/2023-12-15-linux11.md
@@ -6,7 +6,7 @@ toc: true
 author_profile: false
 ---
 
-# 1. 네트워크의 기초
+## 1. 네트워크의 기초
 ### TCP/IP 프로토콜
 - 프로토콜: 컴퓨터간에 데이터를 주고 받기 위하여 정의된 통신 규약
 - 현재 인터넷(네트워크)는 TCP/IP 프로토콜에 따라 데이터를 주고받음
@@ -59,7 +59,7 @@ author_profile: false
 
 ---
 
-# 2. 네트워크 설정
+## 2. 네트워크 설정
 
 ### 네트워크 설정
 - IP 주소, 넷마스크, 브로드캐스트 주소, 게이트웨이(라우터) 주소, DNS 주소
@@ -240,7 +240,7 @@ $ nmcli con up testcon1
 - 호스트명을 IP 주소로 바꾸는 역할을 수행
 - 만약 DNS가 설정되어 있지 않으면 호스트명으로 서버에 접속할 수 없으며 직접 IP 주소를 사용해서 접속
 
-### `nslookup` -DNS 서버에 호스트명으로 ip주소 질의하기
+#### `nslookup` -DNS 서버에 호스트명으로 ip주소 질의하기
 
 |`nslookup`|
 |:---|:---|
@@ -250,27 +250,27 @@ $ nmcli con up testcon1
 
 - `$ nslookup [호스트명]`
 
-### `systemd-resloved` -DNS 서버에 호스트명(도메인명)으로 ip주소 질의하기
+#### `systemd-resloved` -DNS 서버에 호스트명(도메인명)으로 ip주소 질의하기
 - `systemd-resolve [도메인명]`
 - `$ systemd-resolve www.daum.net`
 
 ---
 
-# 3. 호스트 이름 설정
+### 3. 호스트 이름 설정
 
-### 호스트 이름 확인하기
+#### 호스트 이름 확인하기
 - 해당 기관의 도메인 이름에다가 서버에서 제공하는 대표적인 네트워크 서비스 이름을 붙이는 것이 편리함
 - 도메인 이름이 `han.server`인 경우, 주로 메일을 서비스하는 서버는 `mail.han.server`로 이름을 붙임
 - 호스트 이름은 설정 파일에 저장하고 DNS에 등록해야 서비스 제공이 가능함
 
-### 호스트 이름 확인하는 방법
+#### 호스트 이름 확인하는 방법
 1. `uname -n`
 
 2. `hostname`
 
 3. `hostnamectl status` (또는 `hostnamectl`)
 
-### (참고) `uname [옵션]` : 시스템 관련 정보를 출력하는 명령어
+#### (참고) `uname [옵션]` : 시스템 관련 정보를 출력하는 명령어
 - `uname -m` (하드웨어 종류 출력)
 - `uname -n` (호스트 이름 출력)
 - `uname -r` (리눅스 커널의 릴리스 정보 출력)
@@ -278,7 +278,7 @@ $ nmcli con up testcon1
 - `uname -v` (운영체제 버전 출력)
 - `uname -a` (위의 모든 정보 출력)
 
-### 호스트 이름 설정하기
+#### 호스트 이름 설정하기
 1. `hostaname han.server` (han.server로 호스트 이름 설정)
 
 2. `hostnamectl set-hostname myubuntu` (myubuntu로 호스트 이름 설정)
@@ -290,9 +290,9 @@ $ nmcli con up testcon1
 
 ---
 
-# 4. 네트워크 상태 확인
+### 4. 네트워크 상태 확인
 
-### `ping` -네트워크 연결 여부 확인 명령
+#### `ping` -네트워크 연결 여부 확인 명령
 
 |`ping`|
 |:---|:---|
@@ -306,7 +306,7 @@ $ nmcli con up testcon1
 	- `ping 192.168.1.1` (또는 `ping www.hanbit.co.kr`)
 - `ctrl-c`로 `ping` 명령을 종료하면, `ping` 관련 통계정보가 출력
 
-### `traceroute` -통신 경로 확인 명령
+#### `traceroute` -통신 경로 확인 명령
 
 |`traceroute`|
 |:---|:---|
@@ -371,7 +371,7 @@ traceroute to www.naver.com (223.130.195.95), 30 hops max, 60 byte packets
 
 ```
 
-### `whois` -중간 노드(게이트웨이) 확인 명령
+#### `whois` -중간 노드(게이트웨이) 확인 명령
 `whois 112.189.128.53`
 ```
 $ whois 112.189.128.53
@@ -399,7 +399,7 @@ IPv4\uc8fc\uc18c           : 112.160.0.0 - 112.191.255.255 (/11)
 
 ---
 
-# 요약
+### 요약
 - 네트워크 기초(`TCP/IP`, `MAC 주소`, `IP 주소`, `넷마스크`, `호스트 이름`)
 - 네트워크 설정 (`nmcli general`, `nmcli networking`, `ncmli connection`, `nmcli device`)
 - 호스트 이름 확인 및 설정 (`hostname`, `hostnamectl`, `uname -n`)
