--- a/_posts/2023-12-04-first.md
+++ b/_posts/2023-12-04-first.md
@@ -4,9 +4,9 @@ title:  "✨ keep imagining!"
 categories: event
 tags: [AI, Developer, python]
 toc: true
+toc_sticky: true
+toc_label: 목차
 author_profile: false
-sidebar:
-    nav: "docs"
 search: true
 ---
 
