--- a/_posts/2023-12-10-linux6.md
+++ b/_posts/2023-12-10-linux6.md
@@ -6,7 +6,7 @@ toc: true
 author_profile: false
 ---
 
-# 1. 프로세스 개념
+## 1. 프로세스 개념
 
 ### 프로세스
 - 현재 시스템에서 실행 중인 프로그램
@@ -20,7 +20,7 @@ author_profile: false
 - 각 프로세스는 고유한 번호를 가지고 있음
 예) `systemd` 또는 `init 프로세스` (PID: 1), `kthreadd` (PID: 2) - `kernal thread daemon`
 
-## 특수한 프로세스의 종류
+### 특수한 프로세스의 종류
 
 ### 데몬(daemon) 프로세스
 - `특정 서비스`를 제공하기 위해 존재하며 리눅스 커널에 의해 자동 실행되는 경우가 많음
@@ -46,7 +46,7 @@ author_profile: false
 
 ---
 
-# 2. 프로세스 관리 명령
+## 2. 프로세스 관리 명령
 
 ### `ps`- 현재 실행 중인 프로세스의 목록을 보는 명령
 - `유닉스 옵션(SVR4)` : 묶어서 사용 가능, 붙임표(-)로 시작 (예: `-efpu`)
@@ -198,7 +198,7 @@ $ ps -fp 1
 
 ---
 
-# 3. 포그라운드, 백그라운드 프로세스와 작업 제어
+## 3. 포그라운드, 백그라운드 프로세스와 작업 제어
 ### 포그라운드 작업(foreground job): 포그라운드 프로세스
 - 사용자가 입력한 명령이 실행되어 결과가 출력될 때까지 기다려야 하는 방식으로 처리되는 프로세스
 - 이전 작업이 종료되기 전까지 프롬프트가 출력되지 않아 다른 명령 입력 못함
@@ -310,8 +310,8 @@ $ fg
 
 ---
 
-# 4. 작업 예약
-## 특정한 시간에 작업을 수행하도록 예약할 수 있는 방법
+## 4. 작업 예약
+특정한 시간에 작업을 수행하도록 예약할 수 있는 방법
 - `at` -정해진 시간에 한 번만 수행하기 
 - `crontab` -정해진 시간에 반복 수행하기
 
@@ -441,7 +441,7 @@ $ cat tmp.out
 
 ---
 
-# 요약
+## 요약
 
 - 프로세스 개념 (`시스템 프로세스, 사용자 프로세스, PID`)
 - 시스템 프로세스 종류 (`데몬, 고아, 좀비`)
