--- a/_posts/2023-12-04-first.md
+++ b/_posts/2023-12-04-first.md
@@ -2,7 +2,7 @@
 layout: single
 title:  "✨ keep imagining!"
 categories: event
-tags: [AI, Developer, python]
+tags: [AI, Developer, Python]
 toc: true
 toc_sticky: true
 toc_label: 목차
@@ -16,9 +16,11 @@ search: true
 <div class="notice">
 <h3>공지사항입니다. </h3>
 <ul>
-    <li>리눅스 포스팅</li>
+    <li>리눅스 포스팅 완료</li>
+    <li>빅데이터분석 포스팅 시작</li>
+    <li>소프트웨어공학 포스팅 시작</li>
+    <li>개인 프로젝트 포스팅 완료</li>
     <li>데이터베이스 포스팅 예정</li>
-    <li>개인 프로젝트 포스팅 예정</li>
 </ul>
 </div>
 
@@ -37,4 +39,5 @@ search: true
 
 
 인공지능에 관심이 있으며, 인공지능 서비스 개발자가 되고 싶습니다.
+현재 목표로 하는 직종은 DevOps, MLOps 입니다.
 
