--- a/_posts/2023-12-05-linux1.md
+++ b/_posts/2023-12-05-linux1.md
@@ -1,8 +1,8 @@
 ---
 layout: single
-title:  "ch1. 리눅스 명령 사용"
+title:  "[Linux] 1. 리눅스 명령 사용"
 categories: linux
-tag:
+tags: [Major, OS]
 author_profile: false
 toc: true
 ---
