--- a/_posts/2023-12-06-linux2.md
+++ b/_posts/2023-12-06-linux2.md
@@ -1,7 +1,8 @@
 ---
 layout: single
-title:  "ch2. 디렉터리와 파일 사용하기"
+title:  "[Linux] 2. 디렉터리와 파일 사용하기"
 categories: linux
+tags: [Major, OS]
 toc: true
 author_profile: false
 ---
