--- a/_posts/2023-12-07-linux3.md
+++ b/_posts/2023-12-07-linux3.md
@@ -1,7 +1,8 @@
 ---
 layout: single
-title:  "ch3. 문서 편집하기"
+title:  "[Linux] 3. 문서 편집하기"
 categories: linux
+tags: [Major, OS]
 toc: true
 author_profile: false
 ---
