--- a/_posts/2023-12-08-linux4.md
+++ b/_posts/2023-12-08-linux4.md
@@ -1,7 +1,8 @@
 ---
 layout: single
-title:  "ch4. 셸 사용하기"
+title:  "[Linux] 4. 셸 사용하기"
 categories: linux
+tags: [Major, OS]
 toc: true
 author_profile: false
 ---
