--- a/_posts/2023-12-10-linux6.md
+++ b/_posts/2023-12-10-linux6.md
@@ -1,7 +1,8 @@
 ---
 layout: single
-title:  "ch6. 프로세스 관리 명령"
+title:  "[Linux] 6. 프로세스 관리 명령"
 categories: linux
+tags: [Major, OS]
 toc: true
 author_profile: false
 ---
