--- a/_posts/2023-12-11-linux7.md
+++ b/_posts/2023-12-11-linux7.md
@@ -1,7 +1,8 @@
 ---
 layout: single
-title:  "ch7. 파일시스템과 디스크 관리하기(1)"
+title:  "[Linux] 7. 파일시스템과 디스크 관리하기(1)"
 categories: linux
+tags: [Major, OS]
 toc: true
 author_profile: false
 ---
