--- a/_posts/2023-12-12-linux8.md
+++ b/_posts/2023-12-12-linux8.md
@@ -1,7 +1,8 @@
 ---
 layout: single
-title:  "ch8. 파일시스템과 디스크 관리하기(2)"
+title:  "[Linux] 8. 파일시스템과 디스크 관리하기(2)"
 categories: linux
+tags: [Major, OS]
 toc: true
 author_profile: false
 ---
