--- a/_posts/2023-12-13-linux9.md
+++ b/_posts/2023-12-13-linux9.md
@@ -1,7 +1,8 @@
 ---
 layout: single
-title:  "ch9. 소프트웨어 관리"
+title:  "[Linux] 9. 소프트웨어 관리"
 categories: linux
+tags: [Major, OS]
 toc: true
 author_profile: false
 ---
