--- a/_posts/2023-12-14-linux10.md
+++ b/_posts/2023-12-14-linux10.md
@@ -1,7 +1,8 @@
 ---
 layout: single
-title:  "ch10. 사용자 관리"
+title:  "[Linux] 10. 사용자 관리"
 categories: linux
+tags: [Major, OS]
 toc: true
 author_profile: false
 ---
