--- a/_posts/2023-12-15-linux11.md
+++ b/_posts/2023-12-15-linux11.md
@@ -1,7 +1,8 @@
 ---
 layout: single
-title:  "ch11. 네트워크 설정"
+title:  "[Linux] 11. 네트워크 설정"
 categories: linux
+tags: [Major, OS]
 toc: true
 author_profile: false
 ---
