--- a/_posts/2024-1-1-kmeans.md
+++ b/_posts/2024-1-1-kmeans.md
@@ -2,7 +2,7 @@
 layout: single
 title:  "K-means 알고리즘 프로젝트"
 categories: project
-tags: [image processing, project, python]
+tags: [Image processing, Project, Python]
 author_profile: false
 search: true
 ---
