--- a/_posts/2024-1-2-bp.md
+++ b/_posts/2024-1-2-bp.md
@@ -2,7 +2,7 @@
 layout: single
 title:  "오류역전파 알고리즘 프로젝트"
 categories: project
-tags: [AI, Deeplearning, project, python]
+tags: [AI, Deeplearning, Project, Python]
 author_profile: false
 search: true
 ---
