--- a/_posts/2024-3-11-bigdata_2.md
+++ b/_posts/2024-3-11-bigdata_2.md
@@ -1,7 +1,8 @@
 ---
 layout: single
-title:  "빅데이터 분석이란?"
+title:  "1.빅데이터 분석이란?"
 categories: [bigdata, AI]
+tags: [Major, BigData]
 toc: true
 author_profile: false
 ---
