--- a/_posts/2024-3-11-softw_2.md
+++ b/_posts/2024-3-11-softw_2.md
@@ -1,7 +1,8 @@
 ---
 layout: single
-title:  "소프트웨어 공학과 개발 프로세스"
+title:  "1.소프트웨어 공학과 개발 프로세스"
 categories: software
+tags: [Major, Software]
 toc: true
 author_profile: false
 ---
