--- a/_posts/2023-12-09-linux5.md
+++ b/_posts/2023-12-09-linux5.md
@@ -1,7 +1,8 @@
 ---
 layout: single
-title:  "ch5. 파일 접근 권한 관리하기"
+title:  "[Linux] 5. 파일 접근 권한 관리하기"
 categories: linux
+tags: [Major, OS]
 toc: true
 author_profile: false
 ---
