--- a/_posts/2024-1-1-histo.md
+++ b/_posts/2024-1-1-histo.md
@@ -2,7 +2,7 @@
 layout: single
 title:  "히스토그램 평활화 프로젝트"
 categories: project
-tags: [image processing, project, python]
+tags: [Image processing, Project, Python]
 author_profile: false
 search: true
 ---
