blog posting sw3_1

--- a/_posts/2024-3-18-softw_3.md
+++ b/_posts/2024-3-18-softw_3.md
@@ -1,6 +1,6 @@
 ---
 layout: single
-title:  "3.소프트웨어 공학 계획 (1)"
+title:  "3.소프트웨어 공학 계획"
 categories: software
 tags: [Major, Software]
 toc: true
@@ -109,92 +109,5 @@ author_profile: false
 - 각 기능을 구현하는데 필요한 M/M을 소프트웨어 개발 생명주기의 각 단계에 적용해 단계별로 산정
 
 
-# 7. 비용 산정 기법3 (수학적 산정 기법)
 
-## COCOMO 방법
-- COnstructive COst MOdel
-### COCOMO 방법의 개요
-- 소프트웨어 개발 비용을 산정할 때 원시 코드의 크기, 즉 라인 수를 중심에 두는 방법
-- 미국 TRW사의 보엠이 1981년에 저술한 《소프트웨어 공학 경제학》에서 이 방법을 제안
-- 먼저 완성될 소프트웨어의 크기(라인 수LOC)를 추정하고 이를 준비된 식에 대입해 개발에 필요한 M/M을 예측
-
-### COCOMO 방법의 고려 사항
-- 프로그램 유형에 따른 가중치를 두어야 함
-- 개발하려는 소프트웨어를 제품, 컴퓨터, 개발자, 프로젝트의 4가지 특성에 따라 총 15가지로 분류한 후 인건비를 더 보정
-
-### 가중치 반영하기
-#### 단순형 프로젝트
-- 복잡도와 난이도가 비교적 높지 않은 업무용 소프트웨어가 이에 해당
-- 중소 규모 정도이고, 크기는 50KDSI 이하
-#### 중간형 프로젝트
-- 일반 업무용 소프트웨어보다 복잡하고 규모가 더 큰 운영체제, 데이터베이스 관리 프로그램 등이 이에 해당
-- 규모나 복잡도가 중간 정도이고, 크기는 300KDSI 이하
-#### 내장형(임베디드형) 프로젝트
-- 자동화 기기나 전자 제품과 같은 하드웨어와 밀접하게 관련 있는 내장형 소프트웨어가 이에 해당
-- 크기는 300KDSI 이상
-
-
-### 개발 인건비 초기 예측
-- COCOMO 방법에서 제시하는 공식을 사용하면 개발 인건비의 초기 예측 값을 계산
-- 규모가 같은 소프트웨어일 경우 기본형보다는 중간형에서, 중간형보다는 내장형에서 M/M이 더 많이 필요
-![[Pasted image 20240318141007.png]]
-
-### 보정 계수 반영하기
-EAF: Effort Adjustment Factor
-- 노력 조정 수치(EAF): 보정에 사용하는 값, 필요한 각 항목별 승수 값을 모두 곱한 값
-- 15개의 세부 항목에 따른 보정 값을 모두 정해놓음
-
-![cocomovalue]({{site.url}}/assets/images/2024-3-1-softw/cocomovalue.png)
-
-```
-개발하려는 소프트웨어에 요구되는 신뢰도가 높고(1.15), 매우 복잡하며(1.30), 소프트웨어 공학 기술을 거의 사용하지 않고(1.24), 요구되는 개발 일정이 매우 촉박하고(1.10), 다른 요소들은 보통(1.00)일 경우 노력 조정 수치는 다음과 같다.
-
-노력 조정 수치(EAF) =
-
-1.15×1.30×1.24×1.10 = 2.04
-```
-
-
-### 노력 P/M
-```
-만일 개발하려는 소프트웨어의 KDSI가 60이고, 소프트웨어는 중간형이며, 노력 조정 수치(EAF)가 앞서 계산한 것처럼 2.04라면 노력(E: effort=P/M)은 다음과 같다.
-
-PM = 3.0×(KDSI)1.12×EAF=3.0×(60)1.12×2.04 = 600.179
-```
-
-
-#### 노력 조정수치가 반영된 노력 P/M을 구하는 공식
-
-![pmvalue]({{site.url}}/assets/images/2024-3-1-softw/pmvalue.png)
-
-### 총 개발 기간 산정하기
-- 보엠이 제시하는 총 개발 기간을 계산할 때는 개발할 소프트웨어 유형에 상관없이 모두 동일한 상수(2.5) 값을 곱함
-- 개발 기간은 소프트웨어 유형과 상관없음
-![[Pasted image 20240318141518.png]]
-**TDEV** : Total DEVelpment time
-
-앞서 사용한 예를 이용해 총 개발 기간을 구하면 다음과 같다.
-TDEV = 2.5×(PM)0.35 = 2.5×(600.179)0.35 = 23.461
-
-
-## COCOMO II 방법
-
-### 애플리케이션 합성 모델
-- 1단계에서는 입출력 화면 중심의 사용자 인터페이스 개수 등을 계산해 다음의 객체 점수를 산출 
-- 개발 범위에 속한 객체(입출력 화면 등)를 찾음
-- 객체가 제공하는 기능의 복잡도를 3가지(단순형, 보통형, 복잡형)로 분류
-- 객체의 개수에 가중치(단순형, 보통형, 복잡형)를 부여해 결괏값을 산출
-
-### 초기 설계 모델
-- 2단계는 초기 설계 단계에서 예측값을 구함
-- 초기 설계 단계쯤 되면 1단계보다는 시스템의 구조와 기능을 좀 더 상세히 알 수 있어 1단계보다 더욱 정확한 예측이 가능
-
-### 구조 설계 이후 모델
-- 3단계에서는 이미 기능 점수가 나왔기 때문에 노력을 추정하는게 어렵지 않음
-- 기능 점수를 바탕으로 한 LOC를 추정해 소프트웨어 규모를 산정
-
-
-### 애플리케이션 합성 모델 단계에서의 M/M 계산 샘플
-
-![mmvalue]({{site.url}}/assets/images/2024-3-1-softw/mmvalue.png)
 
