--- a/_posts/2023-12-04-first.md
+++ b/_posts/2023-12-04-first.md
@@ -13,8 +13,10 @@ search: true
 **[공지사항]** [민혁 블로그 신규 포스팅 안내 드립니다.](https://xvihaan.github.io/event/first/)
 {: .notice--danger}
 
+
+
 <div class="notice">
-<h3>공지사항입니다. </h3>
+<h3><center>📢 공지사항입니다.</center> </h3>
 <ul>
     <li>리눅스 포스팅 완료</li>
     <li>빅데이터분석 포스팅 중</li>
@@ -24,13 +26,11 @@ search: true
 </ul>
 </div>
 
-[개인 사이트](https://joydac.netlify.app/){: .btn .btn--danger}
-[개인 유튜브](https://www.youtube.com/channel/UCtMPPUYeIc8QlrIx3fFJHVQ){: .btn .btn--danger}
-
+---
 
 # <center>무한한 상상을 담는 개발 블로그.</center>
 
-## 안녕하세요 개발자 김민혁입니다.
+## <center>안녕하세요 개발자 김민혁입니다.</center>
 
 저는 계속 상상해나가는 것을 좋아합니다. 
 
@@ -39,4 +39,9 @@ search: true
 인공지능에 관심이 있으며, 인공지능 서비스 개발자가 되고 싶습니다.
 
 현재 목표로 하는 직종은 ML개발자로 DevOps, MLOps 입니다.
+
+
+
+[개인 사이트](https://joydac.netlify.app/){: .btn .btn--danger}
+[개인 유튜브](https://www.youtube.com/channel/UCtMPPUYeIc8QlrIx3fFJHVQ){: .btn .btn--danger}
 
