--- a/_posts/2024-3-25-softw_4.md
+++ b/_posts/2024-3-25-softw_4.md
@@ -1,3 +1,11 @@
+---
+layout: single
+title:  "6.소프트웨어 공학 요구분석 (1)"
+categories: software
+tags: [Major, Software]
+toc: true
+author_profile: false
+---
 
 
 # 1. 요구사항
