--- a/_posts/2024-3-27-softw_4_1.md
+++ b/_posts/2024-3-27-softw_4_1.md
@@ -1,6 +1,15 @@
+---
+layout: single
+title:  "7.소프트웨어 공학 요구사항 (2)"
+categories: software
+tags: [Major, Software]
+toc: true
+author_profile: false
+---
 
 
 # 4. 요구사항의 표현
+
 ## 표현과 모델의 이해
 ### 표현
 - 생각하거나 느낀 것을 표현하는 방법은 다양
