--- a/_posts/2023-12-15-linux11.md
+++ b/_posts/2023-12-15-linux11.md
@@ -7,6 +7,9 @@ toc: true
 author_profile: false
 ---
 
+**[공지사항]** [민혁 블로그 신규 포스팅 안내 드립니다.](https://xvihaan.github.io/event/first/)
+{: .notice--danger}
+
 ## 1. 네트워크의 기초
 ### TCP/IP 프로토콜
 - 프로토콜: 컴퓨터간에 데이터를 주고 받기 위하여 정의된 통신 규약
