--- a/_posts/2024-1-1-histo.md
+++ b/_posts/2024-1-1-histo.md
@@ -7,6 +7,9 @@ author_profile: false
 search: true
 ---
 
+**[공지사항]** [민혁 블로그 신규 포스팅 안내 드립니다.](https://xvihaan.github.io/event/first/)
+{: .notice--danger}
+
 # [영상처리] 컬러 영상 히스토그램 평활화 구현
 
 ## < Histogram equalization >
