--- a/_posts/2024-1-2-bp.md
+++ b/_posts/2024-1-2-bp.md
@@ -7,6 +7,9 @@ author_profile: false
 search: true
 ---
 
+**[공지사항]** [민혁 블로그 신규 포스팅 안내 드립니다.](https://xvihaan.github.io/event/first/)
+{: .notice--danger}
+
 # [인공지능] 오류역전파 알고리즘 구현 
 
 ## < Backpropagation algorithm >
