--- a/_posts/2024-3-11-softw_2.md
+++ b/_posts/2024-3-11-softw_2.md
@@ -7,6 +7,9 @@ toc: true
 author_profile: false
 ---
 
+**[공지사항]** [민혁 블로그 신규 포스팅 안내 드립니다.](https://xvihaan.github.io/event/first/)
+{: .notice--danger}
+
 
 
 
