--- a/_posts/2023-12-04-first.md
+++ b/_posts/2023-12-04-first.md
@@ -18,18 +18,18 @@ search: true
 <div class="notice">
 <h3><center>📢 공지사항입니다.</center> </h3>
 <ul>
-    <li>[전공] 리눅스 포스팅 완료</li>
+    <li>[완료] 리눅스 포스팅 </li>
 </ul>
 <ul>
-    <li>[전공] 빅데이터분석 포스팅 중</li>
-    <li>[전공] 소프트웨어공학 포스팅 중</li>
+    <li>[진행] 빅데이터분석 포스팅</li>
+    <li>[진행] 소프트웨어공학 포스팅</li>
 </ul>
 <ul>
-    <li>[개발] AutoML & Langchain 포스팅 예정</li>
-    <li>[개발] Doker 포스팅 예정</li>
-    <li>[개발] Kubernetes로 ML 적용하기 포스팅 예정</li>
-    <li>[개발] 2024 Solution Challenge 포스팅 예정</li>
-    <li>[전공] 데이터베이스 포스팅 예정</li>
+    <li>[예정] AutoML & Langchain 포스팅</li>
+    <li>[예정] Doker 포스팅</li>
+    <li>[예정] Kubernetes로 ML 적용하기 포스팅</li>
+    <li>[예정] 2024 Solution Challenge 포스팅</li>
+    <li>[예정] 데이터베이스 포스팅</li>
 </ul>
 </div>
 
