--- a/_posts/2024-3-22-softw_3_2.md
+++ b/_posts/2024-3-22-softw_3_2.md
@@ -7,6 +7,7 @@ toc: true
 author_profile: false
 ---
 
+
 # 8. 일정 계획
 
 ## 일정 계획의 이해
@@ -54,19 +55,19 @@ author_profile: false
 - 노드와 간선을 이용해 초기의 CPM 네트워크를 그림
 - 노드는 작업을, 간선은 작업들 간의 선후 의존 관계를 나타냄
 
-![[Pasted image 20240326164214.png]]
+![sw_3_2_1]({{site.url}}/assets/images/2024-3-1-softw/sw_3_2_1.png)
 
 ② ES값을 구함
 - ES: 가능한 빨리 시작할 수 있는 시간으로, 선행 작업이 완료되었을 때 해당 작업을 시작할 수 있는 가장 빠른 시점
 - ES 값을 구할 때는 맨 앞(작업 A)에서 끝 방향으로 가며 계산
 - ES에서 주의할 부분은 두 작업이 합류하는 지점의 작업 시작 시간은 두 작업이 모두 완전히 끝났을 때
 
-![[Pasted image 20240326164328.png]]
+![sw_3_2_2]({{site.url}}/assets/images/2024-3-1-softw/sw_3_2_2.png)
 
 ③ EF값을 구함
 - EF: 가장 빠른 시작 시간(ES)으로 시작했을 때의 가장 빠른 완료 시간(ES+작업 소요 시간)
 
-![[Pasted image 20240326164405.png]]
+![sw_3_2_3]({{site.url}}/assets/images/2024-3-1-softw/sw_3_2_3.png)
 
 ④ LS값을 구함
 - LS: 어떤 작업을 늦어도 시작해야 하는 시간, 즉 가장 늦게 시작할 수 있는 시간
@@ -80,14 +81,14 @@ author_profile: false
 - ST: 여유 시간, 각 작업에서 ‘가장 늦게 시작하는 시간’에서 ‘가장 빨리 시작하는 시간’을 빼면 구할 수 있음
 - 전체 작업 시간을 줄이고 싶을 때는 여유 시간이 존재하는 작업의 시간을 줄이면 됨
 
-![[Pasted image 20240326164548.png]]
+![sw_3_2_4]({{site.url}}/assets/images/2024-3-1-softw/sw_3_2_4.png)
 
 ⑦ 임계 경로를 구함
 - 임계 경로: 여유 시간이 없는 경로(예시에서는 경로 ‘A-B-D-E-H-K-L-M’가 임계 경로)
 - 임계 경로에는 여유 시간이 없으므로 모든 일정 계획은 임계 경로에 좌우됨
 - 임계 경로에서 벗어난 활동을 수행하는 데 걸리는 시간이 한도 내에서 늦춰지거나 당겨 질 경우에는 전체 프로젝트 완료 시간에 변화가 없음
 
-![[Pasted image 20240326164627.png]]
+![sw_3_2_5]({{site.url}}/assets/images/2024-3-1-softw/sw_3_2_5.png)
 
 
 ## 일정 계획 기법 2: 간트 차트를 이용한 일정표 작성
@@ -96,7 +97,7 @@ author_profile: false
 - 프로젝트의 주요 활동을 파악한 후, 각 활동의 일정을 시작하는 시점과 끝나는 시점을 연결한 막대 모양으로 표시
 - 전체 일정을 한눈에 볼 수 있음
 
-![[Pasted image 20240326164712.png]]
+![sw_3_2_6]({{site.url}}/assets/images/2024-3-1-softw/sw_3_2_6.png)
 
 
 ---
@@ -125,7 +126,7 @@ author_profile: false
 - 위험 요소의 발생 확률과 영향도를 평가(위험 분석)
 - 분석한 결과에 따라 위험 우선순위를 정해 그에 맞게 대책을 설립
 
-![[Pasted image 20240326164920.png]]
+![sw_3_2_7]({{site.url}}/assets/images/2024-3-1-softw/sw_3_2_7.png)
 
 #### 위험 요소 식별
 - 발생 가능한 위험 요소에 대해 브레인스토밍해서 도출하는 방법
