--- a/_posts/2024-3-25-softw_4.md
+++ b/_posts/2024-3-25-softw_4.md
@@ -91,7 +91,7 @@ author_profile: false
 ## 요구분석 절차와 요구사항 분류
 ### 요구 분석 절차
 
-![[Pasted image 20240328094407.png]]
+![sw_4_1]({{site.url}}/assets/images/2024-3-1-softw/sw_4_1.png)
 
 ❶ 자료 수집
   현행 시스템의 문제점 도출, 실무 담당자 인터뷰, 현재 사용하는 문서 검토 등을 통해 가능한 모든 자료를 수집
@@ -108,7 +108,7 @@ author_profile: false
 ### 요구 분석 분류
 - 사용자 요구사항은 개발될 소프트웨어가 제공할 기능 요구사항과 성능, 제약 사항, 품질과 같은 비기능 요구사항으로 분류
 
-![[Pasted image 20240328094458.png]]
+![sw_4_2]({{site.url}}/assets/images/2024-3-1-softw/sw_4_2.png)
 
 ## 기능 요구사항
 - 사용자가 원하는 기능
@@ -144,7 +144,8 @@ author_profile: false
 #### 가용성
 - 소프트웨어가 총 운용 시간 동안 얼마나 정상적으로 고장 없이 가동되었는지를 비율로 나타냄
 
-![[Pasted image 20240328104722.png]]
+![sw_4_3]({{site.url}}/assets/images/2024-3-1-softw/sw_4_3.png)
+
 
 ##### MTBF(평균 정상 작동 시간 또는 고장 간 평균 시간)
 - 고장이 나서 수리 후 정상 작동 하다가 다시 고장이 날 때까지 작동한 시간
