--- a/_posts/2024-3-27-softw_4_1.md
+++ b/_posts/2024-3-27-softw_4_1.md
@@ -101,7 +101,7 @@ author_profile: false
 [4단계] 자료 출원지와 목적지 표현: 자료의 출원지와 목적지도 DFD에 표현해야 함
 자료의 출원지와 목적지는 사각형 박스로 표현 (터미네이터)
 
-![[Pasted image 20240328113706.png]]
+![sw_4_1_1]({{site.url}}/assets/images/2024-3-1-softw/sw_4_1_1.png)
 
 
 ## 구조적 방법의 표현 도구: DFD
@@ -109,11 +109,11 @@ author_profile: false
 - 자료 사전(DD): 자료 흐름도(DFD)에 존재하는 데이터에 대한 자세한 설명을 기록해 놓은 것
 - 자료 사전은 몇 가지 기호를 사용해 자료를 정의
 
-![[Pasted image 20240328113955.png]]
+![sw_4_1_2]({{site.url}}/assets/images/2024-3-1-softw/sw_4_1_2.png)
 
 #### 자료 사전 작성의 예
 
-![[Pasted image 20240328114212.png]]
+![sw_4_1_3]({{site.url}}/assets/images/2024-3-1-softw/sw_4_1_3.png)
 
 - 교과목은 과목번호, 과목명, 이수 구분, 학점(시수), 개설 학년(학기)으로 구성
 - 과목번호는 교과목을 구별할 수 있는 유일한 키 값으로 사용
@@ -127,17 +127,21 @@ author_profile: false
 - 소단위명세서: DFD에서 원으로 표시한 프로세스인 처리는 실제 알고리즘 형태로 작성한 것
 - 소단위명세서를 작성하는 도구에는 구조적 언어, 선후 조건문, 의사 결정표 등이 있음
 
-![[Pasted image 20240328114237.png]]
+![sw_4_1_4]({{site.url}}/assets/images/2024-3-1-softw/sw_4_1_4.png)
+
 
 
 ## 정보공학 방법의 표현 도구: E-R 다이어그램
 ### E-R 다이어그램
-![[Pasted image 20240328114321.png]]
+
+![sw_4_1_5]({{site.url}}/assets/images/2024-3-1-softw/sw_4_1_5.png)
+
 
 ## 객체지향 방법의 표현 도구: 유스케이스 다이어그램
 ### 유스케이스 다이어그램 작성하기
 
-![[Pasted image 20240328114403.png]]
+![sw_4_1_6]({{site.url}}/assets/images/2024-3-1-softw/sw_4_1_6.png)
+
 
 [1단계] 후보 유스케이스 도출
 
@@ -146,7 +150,8 @@ author_profile: false
 [2단계] 후보 유스케이스 검토 / 조교 액터가 사용하는 유스케이스
 [2단계] 후보 유스케이스 검토 / 학사담당직원 액터가 사용하는 유스케이스
 
-![[Pasted image 20240328114530.png]]
+![sw_4_1_7]({{site.url}}/assets/images/2024-3-1-softw/sw_4_1_7.png)
+
 
 [2단계] 후보 유스케이스 검토 / 유스케이스 특성 확인 및 통합
 - 실행 후 사용자가 원하는 결과 제공: 결과물을 제공하는 지 다시 검토
@@ -156,24 +161,27 @@ author_profile: false
 #### 사용하는 기능만 유스케이스로 도출
 - 여러 기능을 단순화해 하나의 유스케이스로 만들면 사용자는 그 안에 포함된 기능을 모두 사용해야 함
 
-![[Pasted image 20240328114704.png]]
+![sw_4_1_8]({{site.url}}/assets/images/2024-3-1-softw/sw_4_1_8.png)
+
 
 주 기능은 유스케이스, 보조 기능은 이벤트 흐름
 - 가장 핵심이 되는 기능은 유스케이스로 나타내고 나머지는 이벤트 흐름에 나타냄
 
-![[Pasted image 20240328114746.png]]
+![sw_4_1_9]({{site.url}}/assets/images/2024-3-1-softw/sw_4_1_9.png)
 
 - 홀로 존재하는 유스케이스는 없음: 홀로 존재하는 유스케이스는 불필요한 것일 가능성이 높으므로 재검토
 
 [3단계] 유스케이스 정렬
 
-![[Pasted image 20240328115110.png]]
+![sw_4_1_10]({{site.url}}/assets/images/2024-3-1-softw/sw_4_1_10.png)
+
 
 ### 유스케이스 명세서 작성하기
 - 유스케이스 다이어그램을 작성하면 각각의 유스케이스에 대한 명세서를 작성해야 함
 - 유스케이스 명세서는 7개 항목으로 구성되며 각 유스케이스의 자세한 내용을 기술하는 문서
 
-![[Pasted image 20240328115142.png]]
+![sw_4_1_11]({{site.url}}/assets/images/2024-3-1-softw/sw_4_1_11.png)
+
 
 #### 개요
 - 유스케이스가 제공하는 기능을 나타내는 것으로, 그 기능을 사용하는 사용자 액터까지 표현해야 함
@@ -198,7 +206,8 @@ author_profile: false
 
 | 유스케이스 | 관련 액터 |
 | :---- | :---- |
-| 수강신청  | 학생    |
+| 수강신청  | 학생   |
+
 ### 우선순위
 - 개발할 때의 순서를 나타낸 것
 - 기준을 정하고 그에 따른 개발 순서를 정한다면 프로젝트 관리 측면에서 도움이 됨
@@ -347,5 +356,6 @@ author_profile: false
 - 요구분석명세서를 작성할 때 문서 표준을 따랐는지 확
 - 설계에서 사용하기에 적합한지를 확인
 
-![[Pasted image 20240328153219.png]]
+![sw_4_1_12]({{site.url}}/assets/images/2024-3-1-softw/sw_4_1_12.png)
+
 
