--- a/_posts/2023-12-04-first.md
+++ b/_posts/2023-12-04-first.md
@@ -20,6 +20,7 @@ search: true
     <li>[완료] 리눅스</li>
     <li>[완료] 영상처리/인공지능 프로젝트</li>
     <li>[완료] AutoML & Langchain</li>
+    <li>[완료] Doker 기초</li>
 </ul>
 <ul>
     <li>[진행] 빅데이터분석</li>
@@ -27,7 +28,6 @@ search: true
 </ul>
 <ul>
     <li>[예정] 데이터베이스</li>
-    <li>[예정] Doker 기초</li>
     <li>[예정] Kubernetes로 ML 적용하기</li>
     <li>[예정] 2024 Solution Challenge</li>
 </ul>
