--- a/_posts/2024-4-1-bigdata_5.md
+++ b/_posts/2024-4-1-bigdata_5.md
@@ -1,6 +1,6 @@
 ---
 layout: single
-title:  "4.빅데이터 머신러닝 기반 데이터분석"
+title:  "4.빅데이터 머신러닝 기반 데이터분석 (1)"
 categories: [bigdata, AI]
 tags: [Major, BigData]
 toc: true
