빅데이터 분석 포스팅 수정 업로드

--- a/_posts/2024-4-8-bigdata_6.md
+++ b/_posts/2024-4-8-bigdata_6.md
@@ -94,11 +94,58 @@ author_profile: false
 ## 실습하기
 
 ```R
+> install.packages("RCurl")
+
+> library(RCurl)
+> install.packages("XML")
+
+> library(XML)
+> t<-readLines('https://en.wikipedia.org/wiki/Data_science')
+
+> d<-htmlParse(t,asText=TRUE)
+> clean_doc<-xpathSApply(d, "//p",xmlValue)
+> install.packages("tm")
+
+> library(tm)
+> install.packages("SnowballC")
 
 
+> library(SnowballC)
+> doc<-Corpus(VectorSource(clean_doc))
+> inspect(doc)
+
+> doc<-tm_map(doc,content_transformer(tolower))
+> doc<-tm_map(doc,removeNumbers)
+> doc<-tm_map(doc,removeWords,stopwords('english'))
+> doc<-tm_map(doc,removePunctuation)
+
+> doc<-tm_map(doc,stripWhitespace)
+
+> dtm<-DocumentTermMatrix(doc)
+> dtm(dtm)
+
+> inspect(dtm)
+
+> install.packages("wordcloud")
+
+> library(wordcloud)
+> m<-as.matrix(dtm)
+> v<-sort(colSums(m),decreasing = TRUE)
+> d<-data.frame(word=names(v),freq=v)
+> wordcloud(words=d$word,freq=d$freq,min.freq=1,max.words=100,random.order=FALSE,rot.per=0.35)
+> inspect(dtm)
+
+> library(wordcloud)
+
+> m<-as.matrix(dtm)
+> v<-sort(colSums(m),decreasing=TRUE)
+> d<-data.frame(word=names(v),freq=v)
+> wordcloud(words=d$word,freq=d$freq,min,freq=1,max.words=100,random.order=FALSE,rot.pe$)
 ```
 
+## 결과
 
+![bd_5_13]({{site.url}}/assets/images/2024-3-1-bigdata/bd_5_13.png)
 
 ---
 
