new bigdata,software major posting update

--- a/_posts/2024-3-20-softw_3_1.md
+++ b/_posts/2024-3-20-softw_3_1.md
@@ -36,7 +36,9 @@ author_profile: false
 ### 개발 인건비 초기 예측
 - COCOMO 방법에서 제시하는 공식을 사용하면 개발 인건비의 초기 예측 값을 계산
 - 규모가 같은 소프트웨어일 경우 기본형보다는 중간형에서, 중간형보다는 내장형에서 M/M이 더 많이 필요
-![[Pasted image 20240318141007.png]]
+
+![cocomovway]({{site.url}}/assets/images/2024-3-1-softw/cocomoway.png)
+
 
 ### 보정 계수 반영하기
 EAF: Effort Adjustment Factor
