--- a/_posts/2024-3-18-softw_3.md
+++ b/_posts/2024-3-18-softw_3.md
@@ -13,7 +13,7 @@ author_profile: false
 ## 계획
 
 ### 계획의 역할
-- 계획을 제대로 세우지 않고 수행하는 소프트웨어 개발은 일저 지연, 비용 초과, 품질 저하라는 결과를 낳게 됨
+- 계획을 제대로 세우지 않고 수행하는 소프트웨어 개발은 일정 지연, 비용 초과, 품질 저하라는 결과를 낳게 됨
 
 ### 계획의 중요성
 - 소프트웨어 개발의 성패는 비용, 기간, 인력과 같은 자원을 토대로 초기에 얼마나 계획을 잘 세우느냐에 달려있음
@@ -104,6 +104,14 @@ author_profile: false
 
 ### 원시 코드 라인 수 기법
 - 소프트웨어 각 기능의 원시 코드 라인 수 LOC의 비관치, 낙관치, 중간치를 측정해서 예측치를 구하고 이를 이용해 노력, 개발 비용, 개발 기간, 생산성 등의 비용을 산정하는 기법
+
+#### 예제
+1. 소프트웨어 개발 기간은 1년(12개월)이다. 5명의 개발자가 12개월 동안, 7명의 개발자가 5개월 동안 참여한다면 이 소프트웨어 개발의 노력M/M이 얼마인가?
+	1. 풀이: `(5명x12개월) + (7명x5개월) = 60M/M + 35M/M = 95M/M`
+2. LOC 기법에 의해 예측한 총 라인이 50,000라인이고, 개발자가 10명 참여한다. 그리고 개발자들이 월평균 500라인을 코딩한다면 개발 기간을 얼마나 되는가?
+	1. 노력^M/M = `원시 코드 라인 수 / (1인당 월평균 생산 코드 라인 수) = 50,000 라인 / 500라인 = 100M/M`
+	2. 개발 기간 = `(M/M)/참여 인원 = 100(M/M)/10명 = 10개월`
+
 
 ### 개발 단계별 노력 기법
 - 각 기능을 구현하는데 필요한 M/M을 소프트웨어 개발 생명주기의 각 단계에 적용해 단계별로 산정
