--- a/_posts/2024-4-3-softw_5_1.md
+++ b/_posts/2024-4-3-softw_5_1.md
@@ -33,6 +33,9 @@ author_profile: false
 - 변경하기 쉽고 변경으로 인한 영향도 적음
 - 프로그램을 효율적으로 관리할 수 있음
 - 설계 및 코드를 재사용할 수 있음
+- 문제를 이해하기 쉽게 만듬
+- 유지보수가 용이
+- 오류로 인한 파급 효과를 최소화할 수 있음
 
 ### 모듈화의 적정 수준
 
