--- a/_posts/2024-3-20-softw_3_1.md
+++ b/_posts/2024-3-20-softw_3_1.md
@@ -105,7 +105,7 @@ TDEV = 2.5×(PM)0.35 = 2.5×(600.179)0.35 = 23.461
 
 ## 기능 점수 산정 방법의 개요
 - 사용자 관점에서 소프트웨어의 기능을 정량화해 소프트웨어 개발 비용 산정에 활용
-- 소프트웨어의 기능이 얼마나 10소프트웨어 개발 시 비용을 산정하는 데 사용
+- 소프트웨어의 기능이 얼마나 복잡한가를 상대적인 점수로 표현
 - 소프트웨어 유지보수 비용을 산정하는 데 사용
 - 소프트웨어 개발 시 필요한 자원을 산정하는 데 사용
 
@@ -119,7 +119,8 @@ TDEV = 2.5×(PM)0.35 = 2.5×(600.179)0.35 = 23.461
 - 기능적 요구사항이 중심이 되는 측정 방법
 - 소프트웨어의 요구사항 복잡도를 측정
 - 구현 관점(물리적 파일, 화면, 프로그램 수)이 아닌 사용자 관점의 요구 기능을 정량적으로 산정
-- 측정의 일관성을 유지하기 위해 개발 기술, 개발 방법, 품질 수준 등은 고려하지 않음소프트웨어 개발에 사용하는 언어와 무관
+- 측정의 일관성을 유지하기 위해 개발 기술, 개발 방법, 품질 수준 등은 고려하지 않음
+- 소프트웨어 개발에 사용하는 언어와 무관
 - 소프트웨어 개발 생명주기의 전체 단계에서 사용 가능
 
 
