--- a/_posts/2024-3-27-softw_4_1.md
+++ b/_posts/2024-3-27-softw_4_1.md
@@ -40,7 +40,7 @@ author_profile: false
 - 추후 요구사항 변경에 따른 유지보수에 활용할 수 있음
 - 이 후 유사한 시스템을 개발할 때도 활용해 개발 기간과 비용을 줄여줌
 
-### 소프트웨어 개발 모델 사용의 장점
+### 소프트웨어 개발 모델 사용의 단점
 #### 과도한 문서 작업으로 일정 지연
 - 단계마다 각종 다이어그램을 포함한 문서 작성에 많은 시간을 할애하다 보면 실제 개발 업무가 지연될 수 있음
 
