소프트웨어공학 UML (다이어그램)으로 제목 수정

--- a/_posts/2024-4-17-softw_7_1.md
+++ b/_posts/2024-4-17-softw_7_1.md
@@ -1,6 +1,6 @@
 ---
 layout: single
-title:  "13.소프트웨어 공학 UML (클래스)"
+title:  "13.소프트웨어 공학 UML (다이어그램)"
 categories: software
 tags: [Major, Software]
 toc: true
@@ -216,7 +216,6 @@ author_profile: false
 #### 컴포넌트
 - 컴포넌트는 시스템을 구성하는 물리적인 요소로 프로그램 코드를 포함
 	- `<<executable>>` : 실행 파일(.exe)
-	- `<<library>>` : DLL 같은 정적 또는 동적 객체 라이브러리
 	- `<<library>>` : DLL 같은 정적 또는 동적 객체 라이브러리
 	- `<<table>>` : 데이터베이스 테이블
 	- `<<file>>` : 원시 코드를 포함하는 파일
