--- a/_posts/2024-3-11-bigdata_2.md
+++ b/_posts/2024-3-11-bigdata_2.md
@@ -91,7 +91,7 @@ But, 빅데이터의 정의는 고정되어 있지 않고 살아있는 생명체
 | 지식(Knowledge)    | 데이터를 통해 도출된 다양한 정보를 구조화하여 유의미한 정보를 분류하고 개인적인 경험을 결합시켜 고유의 지식을 내재화 |
 | 지혜(Wisdom)       | 지식의 축적과 아이디어가 결합된 창의적인 상물                                         |
 
-`DIKE 계층`
+`DIKW 계층`
 지혜 - 지식 - 정보 - 데이터
 ![DIKW]({{site.url}}/assets/images/2024-3-1-bigdata/DIKW.png)
 
@@ -131,9 +131,10 @@ But, 빅데이터의 정의는 고정되어 있지 않고 살아있는 생명체
 `서울시 범죄 취약구역에 따른 안심 귀갓길 안내 및 치안 안전시설 효과`
 ### 범죄 발생 예상 위치 샘플링
 1) 범죄 클러스터 산출
-	1) 범죄 밀도 지도 -> 범죄 밀도 정보 벡터화 -> 범죄 클러스터 산출
+- 범죄 밀도 지도 -> 범죄 밀도 정보 벡터화 -> 범죄 클러스터 산출
+
 2) Monte-Carlo Sampling
-	1) 범죄 클러스터 별 다변량정규분포 가정 -> 각 다변량정규분포에서 Seed 별 범죄예상 위치 샘플링
+- 범죄 클러스터 별 다변량정규분포 가정 -> 각 다변량정규분포에서 Seed 별 범죄예상 위치 샘플링
 
 
 ---
@@ -162,7 +163,7 @@ But, 빅데이터의 정의는 고정되어 있지 않고 살아있는 생명체
 # 5. 빅데이터 기술 및 제도
 ## 빅데이터 플랫폼
 다양하고 방대한 양의 데이터로부터 수집한 데이터를 처리하고 분석하여 지식을 추출함으로써 지능화된 서비스를 제공하기 위한 IT 환경
-`데이터 소스` -> `수집` -> `저장` -> `처리` -> `분석` -> `표현`
+- `데이터 소스` -> `수집` -> `저장` -> `처리` -> `분석` -> `표현`
 
 ## 인공지능 이란?
 1. 인간의 학습 능력, 추론 능력, 지각 능력, 그외에 인공적으로 구현한 컴퓨터 프로그램 또는 이를 포함한 컴퓨터 시스템
