--- a/_posts/2024-3-11-softw_2.md
+++ b/_posts/2024-3-11-softw_2.md
@@ -27,7 +27,7 @@ author_profile: false
 • 소프트웨어는 하드웨어의 동작을 지시하고 제어하는 역할을 수행함. 
 • 프로그램 뿐 아니라 프로그램 수행에 관련된 절차, 규칙, 문서까지 총칭함.
   따라서, 프로그램보다 넓은 의미임. 하지만 보통 소프트웨어와 프로그램을 같은 의미로 사용.
-`소프트웨어 = 프로그램 + 프로그램 관련 절차, 규칙, 문서`
+- `소프트웨어 = 프로그램 + 프로그램 관련 절차, 규칙, 문서`
 
 ### 소프트웨어의 분류
 
