--- a/_posts/2024-6-3-part1.md
+++ b/_posts/2024-6-3-part1.md
@@ -9,6 +9,7 @@ author_profile: false
 
 
 # 1주차. 소프트웨어 공학과 개발 프로세스
+
 ## 1) 프로그램
 프로그램은 어떤 일을 처리할 순서와 방법을 지시하는 명령어 들의 집합을 의미
 
@@ -70,7 +71,7 @@ author_profile: false
 - 사용자는 사용자 인터페이스 중심의 화면과 실행 후 나타나는 가상의 결과 화면 확인
 - 변경된 요구사항을 반영하거나 추가해 2차 프로토타입을 제작 후 사용자에게 보여줌
 - 모든 과정 반복.
-![[Pasted image 20240313133044.png]]
+20240313133044
 
 ### 프로토타입 모델
 - 대량 생선에 앞서 미리 제작해보는 원형 또는 시제품
@@ -108,7 +109,7 @@ author_profile: false
 4) **전이 단계**
 	1) `이행 단계`; 사용자를 위한 제품을 완성
 	2) 완성된 제품을 사용자에게 넘겨주는 과정 수행 작업
-![[Pasted image 20240313140611.png]]
+20240313140611
 
 ## 5) 애자일 프로세스 모델과 폭포수 모델의 비교 🔥
 
@@ -128,7 +129,7 @@ author_profile: false
 - 소프트웨어의 전체를 판단할 수 있는 12개의 다이어그램 제시
 - 시스템이 상호작용하는 측면, 시스템 전체 구조 측면, 컴포넌트 간의 관계 등을 시각적으로 나타낸 도면
 	- **구조 다이어그램** / **행위 다이어그램** / **상호작용 다이어그램**
-![[Pasted image 20240416161157.png]]
+20240416161157
 
 ## 2) 유스케이스 다이어그램
 보조자료 중점 글→다이어그램 or 다이어그램을 보고 설명.
@@ -156,28 +157,28 @@ author_profile: false
 #### 유스케이스→시스템 액터 관계
 액터의 일반화 관계
 일반화: 개별적인 것에서 공통적인 특징을 뽑아 이름을 붙인 것(반대: 특수화)
-![[Pasted image 20240416163126.png]]
+20240416163126
 - 일반화 개념은 액터 사이에 먼저 적용할 수 있음
-![[Pasted image 20240416163150.png]]
+20240416163150
 - 간결하게 일반화해 복잡함을 줄이면 이해하기가 쉽고 새로운 액터도 간단하게 추가할 수 있음
-![[Pasted image 20240416163210.png]]
+20240416163210
 
 ### 무인 도서 대출 반납 시스템 예제  🔥
 그려보고 풀어보기
 
 유스케이스 다이어그램은 `유스케이스, 액터, 시스템, 시나리오, 이벤트 흐름` 등의 구성요소
 
-![[Pasted image 20240423141646.png]]
+20240423141646
 
-![[Pasted image 20240423141732.png]]
-![[Pasted image 20240423141905.png]]
+20240423141732
+20240423141905
 
 #### 유스케이스 다이어그램 예제
-![[Pasted image 20240423142035.png]]
+20240423142035
 
 ##### 예제 문제 도출
-![[Pasted image 20240423142240.png]]
-![[Pasted image 20240423142314.png]]
+20240423142240
+20240423142314
 - 유스케이스 다이어그램 ppt 참고
 
 
@@ -192,7 +193,7 @@ author_profile: false
 - **첫 번째 칸에는 클래스 이름**
 - **두 번째 칸에는 클래스의 속성**
 - **마지막 칸은 클래스가 제공하는** 기능인 **메서드**
-![[Pasted image 20240416163816.png]]
+20240416163816
 
 ### 클래스 이름*
 - 클래스는 다른 클래스와 구별되는 유일한 이름을 가짐
@@ -217,7 +218,7 @@ author_profile: false
 
 ### 클래스 다이어그램의 예
 
-![[Pasted image 20240416164801.png]]
+20240416164801
 - 학생은 여러 과목을 수강할 수 있음
 - 학생은 하나의 학교에 소속되어 있음
 - 교수는 하나의 학교에 소속되어 있음
@@ -239,14 +240,14 @@ author_profile: false
 - 활동: 일의 처리와 실행을 나타내며 모서리가 둥근 사각형으로 표기
 - 전이: 활동 간의 이동을 나타내며 화살표로 표기
 
-![[Pasted image 20240416215348.png]]
+20240416215348
 
 
 ### 분기와 병합
 - `분기` : 조건에 의해 두 가지 경로로 나뉘는 위치이며 마름모를 사용 / 조건문은 마름모 옆에 << >> 기호로 작성
 - `병합` : 분기되어 각 활동을 수행하다가 합쳐지는 위치를 나타내며 분기와 같이 마름모를 사용 / 생략이 가능
 
-. image 20240416220413.png]]
+. image 20240416220413
 
 
 ### 활동 다이어그램
@@ -254,11 +255,11 @@ author_profile: false
 - **동기화 막대**
 	- 여러 활동을 병행할 때 사용하는 것으로 동시 처리의 시작과 끝을 나타냄
 
-. image 20240416220745.png]]
+. image 20240416220745
 #### 신호 🔥
 - 활동 사이의 거래는 제어 신호를 보내는 방식으로 이루어짐
 
-. image 20240416220913.png]]
+. image 20240416220913
 #### 구획면 🔥
 - 수영장의 레인을 의미하는데 수영 선수가 자신의 레인을 넘어가면 안 되는 것처럼 해당 레인을 책임지는 객체가 있음
 
@@ -280,13 +281,13 @@ author_profile: false
 #### 인터페이스
 - 클래스 모양으로 나타내거나 아이콘을 사용해 간략하게 표현할 수 있음
 
-. image 20240416221725.png]]
+. image 20240416221725
 
 #### 의존 관계
 - 서로 영향을 주고받는 관계를 말함
 - 컴포넌트 간 연결은 점선 화살표로 나타내며 의존하는 쪽으로 화살표가 연결
 
-. image 20240416221755.png]]
+. image 20240416221755
 
 ### 컴포넌트 다이어그램의 작성 과정
 #### 컴포넌트 대상 정의
@@ -300,7 +301,7 @@ author_profile: false
 - 컴포넌트 간 의존 관계를 정의
 - 각 컴포넌트의 인터페이스를 원으로 표시하고 인터페이스에 대한 실현은 컴포넌트와 연결
 
-. image 20240416221955.png]]
+. image 20240416221955
 
 
 
@@ -346,14 +347,14 @@ author_profile: false
 ### 개발 인건비 초기 예측
 - COCOMO 방법에서 제시하는 공식을 사용하면 개발 인건비의 초기 예측 값을 계산
 - 규모가 같은 소프트웨어일 경우 기본형보다는 중간형에서, 중간형보다는 내장형에서 M/M이 더 많이 필요
-. image 20240318141007.png]]
+. image 20240318141007
 
 ### 보정 계수 반영하기
 EAF: Effort Adjustment Factor
 - 노력 조정 수치(EAF): 보정에 사용하는 값, 필요한 각 항목별 승수 값을 모두 곱한 값
 - 15개의 세부 항목에 따른 보정 값을 모두 정해놓음
 
-. image 20240318141136.png]]
+. image 20240318141136
 
 ```
 개발하려는 소프트웨어에 요구되는 신뢰도가 높고(1.15), 매우 복잡하며(1.30), 소프트웨어 공학 기술을 거의 사용하지 않고(1.24), 요구되는 개발 일정이 매우 촉박하고(1.10), 다른 요소들은 보통(1.00)일 경우 노력 조정 수치는 다음과 같다.
@@ -373,12 +374,12 @@ PM = 3.0×(KDSI)1.12×EAF=3.0×(60)1.12×2.04 = 600.179
 
 
 #### 노력 조정수치가 반영된 노력 P/M을 구하는 공식
-. image 20240318141449.png]]
+. image 20240318141449
 
 ### 총 개발 기간 산정하기
 - 보엠이 제시하는 총 개발 기간을 계산할 때는 개발할 소프트웨어 유형에 상관없이 모두 동일한 상수(2.5) 값을 곱함
 - 개발 기간은 소프트웨어 유형과 상관없음
-. image 20240318141518.png]]
+. image 20240318141518
 **TDEV** : Total DEVelpment time
 
 앞서 사용한 예를 이용해 총 개발 기간을 구하면 다음과 같다.
@@ -403,7 +404,7 @@ TDEV = 2.5×(PM)0.35 = 2.5×(600.179)0.35 = 23.461
 
 
 ### 애플리케이션 합성 모델 단계에서의 M/M 계산 샘플
-. image 20240318141749.png]]
+. image 20240318141749
 
 
 ## 4) 기능 점수 산정 방법
@@ -411,10 +412,10 @@ TDEV = 2.5×(PM)0.35 = 2.5×(600.179)0.35 = 23.461
 ### 기능 점수 산정 방법
 #### 기능 점수 산정 방법의 구분
 - 기능 점수의 기준이 되는 소프트웨어 기능은 크게 데이터 기능과 트랜잭션으로 구분
-. image 20240320133924.png]]
+. image 20240320133924
 
 - SW사업 대가산정 가이드에서 제시하는 기능 점수 산정 방법 구분
-. image 20240320133928.png]]
+. image 20240320133928
 
 ### 기능 점수 산정 방법
 
@@ -433,15 +434,15 @@ TDEV = 2.5×(PM)0.35 = 2.5×(600.179)0.35 = 23.461
 ### 데이터 기능 점수 계산
 - 이번 프로젝트에서 생성해 관리하는 데이터는 내부 논리 파일(ILF)
 - 이번 프로젝트에서 만들지 않고 다른 프로젝트에서 생성했으나 이번 프로젝트에서 참조하는 데이터는 외부 연계 파일(EIF)
-. image 20240320141304.png]]
+. image 20240320141304
 
 - 데이터 기능 점수는 내부 논리 파일의 개수와 외부 연계 파일의 개수에 각각의 평균 복잡도(가중치)를 곱해 계산
 
-![[Pasted image 20240320141319.png]]
+20240320141319
 
 ### 트랜잭션 기능 점수 계산 🔥
 - 기능 점수에서 트랜잭션 기능의 복잡도는 입력, 출력, 조회의 개수로 결정
-![[Pasted image 20240320141456.png]]
+20240320141456
 
 #### 외부 입력(EI)
 - 데이터베이스에 데이터를 등록하거나 수정·삭제하는 것(학생정보 등록, 수정, 삭제)
@@ -449,12 +450,12 @@ TDEV = 2.5×(PM)0.35 = 2.5×(600.179)0.35 = 23.461
 - 계산하는 로직을 거쳐 데이터나 제어 정보를 사용자에게 보여주는 기능(학생 학점 조회)
 #### 외부 조회(EQ)
 - 로직이 필요 없고 데이터베이스에 존재하는 데이터를 찾아 그대로 표시만 해주는 기능(학생 주소 검색, 학생정보 조회)
-![[Pasted image 20240320141540.png]]
+20240320141540
 
 ### 미조정 기능 점수 계산(UFP)
 - 앞에서 구한 데이터 기능 점수와 트랜잭션 기능 점수를 합한 값
 - 단순히 기능적인 요구사항에 대해서만 계산했지, 여러 가지 특성에 대한 고려를 하지 않음
-![[Pasted image 20240320141743.png]]
+20240320141743
 
 
 
@@ -481,19 +482,19 @@ TDEV = 2.5×(PM)0.35 = 2.5×(600.179)0.35 = 23.461
 - 노드와 간선을 이용해 초기의 CPM 네트워크를 그림
 - 노드는 작업을, 간선은 작업들 간의 선후 의존 관계를 나타냄
 
-![[Pasted image 20240326164214.png]]
+20240326164214
 
 ② ES값을 구함
 - ES: 가능한 빨리 시작할 수 있는 시간으로, 선행 작업이 완료되었을 때 해당 작업을 시작할 수 있는 가장 빠른 시점
 - ES 값을 구할 때는 맨 앞(작업 A)에서 끝 방향으로 가며 계산
 - ES에서 주의할 부분은 두 작업이 합류하는 지점의 작업 시작 시간은 두 작업이 모두 완전히 끝났을 때
 
-![[Pasted image 20240326164328.png]]
+20240326164328
 
 ③ EF값을 구함
 - EF: 가장 빠른 시작 시간(ES)으로 시작했을 때의 가장 빠른 완료 시간 **(작업 시작 시간+작업 시간)**
 
-![[Pasted image 20240326164405.png]]
+20240326164405
 
 ④ LS값을 구함
 - LS: 어떤 작업을 늦어도 시작해야 하는 시간, 즉 가장 늦게 시작할 수 있는 시간
@@ -507,14 +508,14 @@ TDEV = 2.5×(PM)0.35 = 2.5×(600.179)0.35 = 23.461
 - ST: 여유 시간, 각 작업에서 ‘가장 늦게 시작하는 시간’에서 ‘가장 빨리 시작하는 시간’을 빼면 구할 수 있음
 - 전체 작업 시간을 줄이고 싶을 때는 여유 시간이 존재하는 작업의 시간을 줄이면 됨
 
-![[Pasted image 20240326164548.png]]
+20240326164548
 
 ⑦ 임계 경로를 구함
 - 임계 경로: 여유 시간이 없는 경로(예시에서는 경로 ‘A-B-D-E-H-K-L-M’가 임계 경로)
 - 임계 경로에는 여유 시간이 없으므로 모든 일정 계획은 임계 경로에 좌우됨
 - 임계 경로에서 벗어난 활동을 수행하는 데 걸리는 시간이 한도 내에서 늦춰지거나 당겨 질 경우에는 전체 프로젝트 완료 시간에 변화가 없음
 
-![[Pasted image 20240326164627.png]]
+20240326164627
 
 
 ## 6) 일정 계획 기법 2: 간트 차트를 이용한 일정표 작성
@@ -523,7 +524,7 @@ TDEV = 2.5×(PM)0.35 = 2.5×(600.179)0.35 = 23.461
 - 프로젝트의 주요 활동을 파악한 후, 각 활동의 일정을 시작하는 시점과 끝나는 시점을 연결한 막대 모양으로 표시
 - 전체 일정을 한눈에 볼 수 있음
 
-![[Pasted image 20240326164712.png]]
+20240326164712
 
 
 
@@ -562,7 +563,7 @@ TDEV = 2.5×(PM)0.35 = 2.5×(600.179)0.35 = 23.461
 ## 2) 요구분석 절차와 요구사항 분류 🔥
 ### 요구 분석 절차 🔥 - 자요문검
 
-![[Pasted image 20240328094407.png]]
+20240328094407
 
 ❶ **자료 수집**
   현행 시스템의 문제점 도출, 실무 담당자 인터뷰, 현재 사용하는 문서 검토 등을 통해 가능한 모든 자료를 수집
@@ -579,7 +580,7 @@ TDEV = 2.5×(PM)0.35 = 2.5×(600.179)0.35 = 23.461
 ### 요구 분석 분류 🔥
 - 사용자 요구사항은 개발될 소프트웨어가 제공할 기능 요구사항과 성능, 제약 사항, 품질과 같은 비기능 요구사항으로 분류
 
-![[Pasted image 20240328094458.png]]
+20240328094458
 
 ### 기능 요구사항
 - 사용자가 원하는 기능
@@ -593,7 +594,7 @@ TDEV = 2.5×(PM)0.35 = 2.5×(600.179)0.35 = 23.461
 ##### 가용성 🔥
 - 소프트웨어가 총 운용 시간 동안 얼마나 정상적으로 고장 없이 가동되었는지를 비율로 나타냄
 
-![[Pasted image 20240328104722.png]]
+20240328104722
 가용성 계산식: `가용성(%) = (MTBF/(MTBF+MTTR))X100(%) `
 
 ##### MTBF(평균 정상 작동 시간 또는 고장 간 평균 시간)
@@ -614,13 +615,13 @@ TDEV = 2.5×(PM)0.35 = 2.5×(600.179)0.35 = 23.461
 
 [3단계] 유스케이스 정렬
 
-![[Pasted image 20240328115110.png]]
+20240328115110
 
 ### 유스케이스 명세서 작성하기
 - 유스케이스 다이어그램을 작성하면 각각의 유스케이스에 대한 명세서를 작성해야 함
 - 유스케이스 명세서는 7개 항목으로 구성되며 각 유스케이스의 자세한 내용을 기술하는 문서
 
-![[Pasted image 20240328115142.png]]
+20240328115142
 
 #### 개요
 - 유스케이스가 제공하는 기능을 나타내는 것으로, 그 기능을 사용하는 사용자 액터까지 표현해야 함
@@ -707,7 +708,7 @@ TDEV = 2.5×(PM)0.35 = 2.5×(600.179)0.35 = 23.461
 - 요구분석명세서를 작성할 때 문서 표준을 따랐는지 확
 - 설계에서 사용하기에 적합한지를 확인
 
-![[Pasted image 20240328153219.png]]
+20240328153219
 - 키워드 중요
 
 
@@ -734,7 +735,7 @@ TDEV = 2.5×(PM)0.35 = 2.5×(600.179)0.35 = 23.461
 ### 1) 객체지향 설계에서 추상화의 의미 🔥
 **유사한 특성을 가진 것끼리 그룹화한 뒤 공통점을 뽑아 이름을 붙이는 것**
 
-![[Pasted image 20240401133756.png]]
+20240401133756
 
 ### 2) 캡슐화의 개요 🔥
 - 전자제품은 내부가 어떻게 구성되어 있으며 어떤 방식으로 돌아가는지 몰라도 기능과 사용법을 아는게 중요함
@@ -753,7 +754,7 @@ TDEV = 2.5×(PM)0.35 = 2.5×(600.179)0.35 = 23.461
 - protected로 설정된 요소는 다른 클래스가 접근할 수 없음
 - 해당 클래스의 메서드와 클래스를 상속받은 하위 클래스만 접근
 
-![[Pasted image 20240404093216.png]]
+20240404093216
 
 ### 4) 상속
 - 상위 클래스의 모든 것을 하위 클래스가 물려받아 내 것처럼 사용함
@@ -794,7 +795,7 @@ TDEV = 2.5×(PM)0.35 = 2.5×(600.179)0.35 = 23.461
 
 #### 모듈화의 적정 수준
 - 모듈을 적절하게 나뉘어야 최소 비용을 맞출 수 있다.
-![[Pasted image 20240403135559.png]]
+20240403135559
 
 #### 모듈 간 관계
 - 호출 관계: 모듈 A가 모듈 B를 호출하는 관계
@@ -810,7 +811,7 @@ TDEV = 2.5×(PM)0.35 = 2.5×(600.179)0.35 = 23.461
 - 응집도가 **가장 높은 것**은 모듈 하나가 **단일 기능으로 구성**된 경우
 - 응집도가 **가장 낮은 것**은 구성 요소가 필요에 의해 모듈에 존재하는 것이 아니라 **우연히 함께 묶인 경우**
 
-![[Pasted image 20240403135738.png]]
+20240403135738
 - **응집도가 높으면** 필요한 구성 요소만 모여 **좋다.**  🔥
 - **응집도가 낮으면** 서로 관련성이 적어 **안좋다.**
 - 응집도가 높거나 낮은 표현을 그림, 말로 작성
@@ -823,7 +824,7 @@ TDEV = 2.5×(PM)0.35 = 2.5×(600.179)0.35 = 23.461
 - 모듈 간에는 **관련이 적을수록** 상호 의존성이 줄어 모듈의 **독립성이 높아지고** 독립성이 높으면 **모듈 간에 영향이 적음** = 결합도가 낮음
 - 결합에서 좋은 관계는 데이터만 주고받는 관계 / 나쁜 관계는 필요한 데이터만 주지 않고 직접 관여(간섭)하는 관계
 
-![[Pasted image 20240403141823.png]]
+20240403141823
 - **결합도가 낮으면** 상호의존성이 줄어 독립성이 높아져 **좋다.**  🔥
 - **결합도가 높으면** 간섭을 많이 받아 **안좋다.**
 
@@ -872,7 +873,7 @@ TDEV = 2.5×(PM)0.35 = 2.5×(600.179)0.35 = 23.461
 ## 2) 아키텍처 스타일(6-3) 🔥
 - 아키텍처 스타일은 각각의 특징이 있고 해당 스타일만의 구성과 모양을 가지고 있음
 
-![[Pasted image 20240411163144.png]]
+20240411163144
 - 어떠한 종류이고 서로의 특징차이를 비교하자
 ### 1. 데이터 중심형 스타일
 - 가장 큰 특징은 **주요 데이터**가 리포지토리에서 **중앙 관리**된다는 점
@@ -881,7 +882,7 @@ TDEV = 2.5×(PM)0.35 = 2.5×(600.179)0.35 = 23.461
 - 대량의 데이터를 공유하는 은행 업무 시스템에 매우 유용
 - 서브시스템과 리포지토리의 결합도가 높아 리포지토리를 변경하면 서브시스템에 영향을 줄 수 있다는 단점
 
-![[Pasted image 20240411163520.png]]
+20240411163520
 
 ### 2. 클라이언트-서버 스타일
 - **네트워크를 이용하는 분산 시스템 형태**로 데이터와 처리 기능을 **클라이언트와 서버에 분할**해 사용
@@ -898,13 +899,13 @@ TDEV = 2.5×(PM)0.35 = 2.5×(600.179)0.35 = 23.461
 - 클라이언트가 서버에 서비스를 요청할 때는 서버의 이름과 제공서비스를 알아야 함
 - 인터넷을 통해 웹서버와 통신해 웹 페이지를 다운로드하고 사용자에게 보여주는 웹브라우저가 해당
 
-![[Pasted image 20240411163603.png]]
+20240411163603
 
 ### 3. 계층 스타일
 - 기능을 몇개의 계층으로 나누어 배치
 - 재사용 및 유지보수가 용이
 - 역할 분담이 명확, 각 계층 쉽게 변경 가능
-![[Pasted image 20240423155535.png]]
+20240423155535
 
 ### 4. MVC 스타일
 - 구성요소를 기능별 또는 특성별로 명확하게 분리해 유지보수를 쉽게하고 프로그램의 확장성과 유연성을 높임
@@ -922,7 +923,7 @@ TDEV = 2.5×(PM)0.35 = 2.5×(600.179)0.35 = 23.461
 - 개별 클래스와 공통 클래스 사이에 ‘is a kind of’ 관계가 성립되어야 함
 - `is a kind of 관계` : ‘사각형은 도형의 일종이다’, ‘원은 도형의 일종이다’
 
-![[Pasted image 20240412101545.png]]
+20240412101545
 
 
 ## 집합 관계
@@ -933,7 +934,7 @@ TDEV = 2.5×(PM)0.35 = 2.5×(600.179)0.35 = 23.461
 - 모든 객체가 별개의 생명주기를 가지고 있으며 각각 독립적으로 동작하기 때문에 약한 결합 관계
 - 집합 관계에서 전체(컴퓨터)와 부분(모니터, 본체, 키보드)의 연결은 직선으로 하되 머리 부분은 속이 비어 있는 마름모 모양
 
-![[Pasted image 20240412101819.png]]
+20240412101819
 
 
 ## 합성 관계
@@ -943,7 +944,7 @@ TDEV = 2.5×(PM)0.35 = 2.5×(600.179)0.35 = 23.461
 - 모든 객체가 같은 생명주기를 가지고 있으므로 각각 독립적으로 동작할 수 없는 강한 결합 관계
 - 전체(노트북)와 부분(모니터, 본체, 키보드)의 연결은 직선으로 하되 머리 부분은 속이 채워진 마름모 모양
 
-![[Pasted image 20240413181500.png]]
+20240413181500
 
 
 ## 의존 관계 🔥
@@ -952,14 +953,14 @@ TDEV = 2.5×(PM)0.35 = 2.5×(600.179)0.35 = 23.461
 - **연관 관계는 상대 클래스를 인식**하기 위해 **멤버 변수를 가짐**
 - 클래스 A인 Repeater 클래스가 클래스 B인 Scan 클래스를 멤버 변수로 가지고 있음
 
-![[Pasted image 20240413181604.png]]
+20240413181604
 
 ### 연관 관계와 의존 관계의 차이점
 - 의존 관계는 상대의 메서드를 가지고 있음
 - 예시) 클래스 A의 메서드가 클래스 B의 객체를 인자로 받아 그 메서드를 사용할 경우
 - 색 글자로 표시된 부분을 보면 Scan 클래스를 인자(파라미터)로 받아 사용
 
-![[Pasted image 20240413181655.png]]
+20240413181655
 - **서로 참조**  🔥
 	- **연관**: 서로 인식하기 위해 멤버 변수를 가짐
 	- **의존**: 상대의 메서드를 가지고 있음
@@ -977,7 +978,7 @@ TDEV = 2.5×(PM)0.35 = 2.5×(600.179)0.35 = 23.461
 - 스테레오타입으로 <<>>를 사용하고 하위 클래스와의 연관은 일반화 관계와 다르게 점선으로 나타냄
 - 화살표의 머리 부분은 하위 클래스에서 상위 클래스로 향하며 모양은 속이 빈 삼각형
 
-![[Pasted image 20240413183018.png]]
+20240413183018
 
 
 
@@ -991,7 +992,7 @@ TDEV = 2.5×(PM)0.35 = 2.5×(600.179)0.35 = 23.461
 - 모든 클래스는 한 가지 책임, 즉 변경의 이유를 오직 하나만 갖도록 설계하고 클래스는 그 책임을 완전히 캡슐화하는 것
 - 클래스에 2개의 책임이 존재한다면 2개의 클래스로 분리해 ‘변경해야 하는 이유가 오직 하나 가 되도록’ 설계하는 것이 바람직
 
-![[Pasted image 20240413183122.png]]
+20240413183122
 
 ## 4) 개방 폐쇄 원칙 (OCP)
 
@@ -1004,7 +1005,7 @@ TDEV = 2.5×(PM)0.35 = 2.5×(600.179)0.35 = 23.461
 - 처음에는 MP4만 지원하던 Video_Palyer 클래스에 지원가능한 파일 형식이 늘어날때마다 클래스를 수정
 - 개방 폐쇄 원칙을 따르지 않으면 지원 가능한 파일 형식이 늘어날 때마다 계속 클래스를 수정해야 함
 
-![[Pasted image 20240413185235.png]]
+20240413185235
 
 
 ### Video_Palyer 클래스의 예시: 원칙 적용
@@ -1012,7 +1013,7 @@ TDEV = 2.5×(PM)0.35 = 2.5×(600.179)0.35 = 23.461
 - 하위 클래스에는 코덱의 종류를 배치해 계속 추가할 수 있도록 함
 - Video_Player 클래스에서 이들을 호출해 사용하도록 설계
 
-![[Pasted image 20240413185453.png]]
+20240413185453
 
 ### 개방 폐쇄 원칙의 장점
 - 변경에 닫혀 있는 설계: 계속된 추가 사항이 있어도 **그들끼리만 추가**할 수 있도록 설계
@@ -1039,7 +1040,7 @@ TDEV = 2.5×(PM)0.35 = 2.5×(600.179)0.35 = 23.461
 - 학생이 **사용하는 것은 수강신청()과 성적조회()** 뿐인데 사용하지 않는 **다른 메서드와도 연관 관계** 를 맺고 있음 (사용하지 않는 것은 연관 관계X)
 - 직원과 교수도 마찬가지로 사용하지 않는 메서드와 연관 관계를 맺고 있음
 
-![[Pasted image 20240414205640.png]]
+20240414205640
 
 
 ### 학사관리 클래스의 예시: 원칙 적용 🔥
@@ -1048,14 +1049,14 @@ TDEV = 2.5×(PM)0.35 = 2.5×(600.179)0.35 = 23.461
 - 학생 인터페이스의 수강신청(), 성적조회()의 구현은 학사관리 클래스에 그대로 남아 있음
 - `단일 책임 원칙` 과 혼동해서는 안됨
 
-![[Pasted image 20240414205713.png]]
+20240414205713
 - 분리의 원칙(인터페이스 분리)
 
 
 
 ## 설계의 원리와 (클래스)설계 원칙의 차이점 비교🔥
 
-![[Pasted image 20240423162044.png]]
+20240423162044
 
 ### < 설계의 원리 >
 `추상화,정보은닉,상속,다형성,모듈화 등`
