데이터베이스 기초편 수정

--- a/_posts/2023-12-04-first.md
+++ b/_posts/2023-12-04-first.md
@@ -21,14 +21,14 @@ search: true
     <li>[완료] 영상처리/인공지능 프로젝트</li>
     <li>[완료] AutoML & Langchain</li>
     <li>[완료] Doker 기초</li>
+    <li>[완료] 빅데이터분석</li>
+    <li>[완료] 소프트웨어공학</li>
 </ul>
 <ul>
-    <li>[진행] 빅데이터분석</li>
-    <li>[진행] 소프트웨어공학</li>
+    <li>[진행] 데이터베이스</li>
 </ul>
 <ul>
-    <li>[예정] 데이터베이스</li>
-    <li>[예정] Kubernetes로 ML 적용하기</li>
+    <li>[예정] Kubernetes로 ML 프로젝트 적용하기</li>
     <li>[예정] 2024 Solution Challenge</li>
 </ul>
 </div>
@@ -45,10 +45,10 @@ search: true
 
 인공지능에 관심이 있으며, 인공지능 서비스 개발자가 되고 싶습니다.
 
-현재 목표로 하는 직종은 ML개발자로 DevOps, MLOps 입니다.
+현재 목표로 하는 직종은 MLOps, LLMOps 개발자 입니다.
 
 
 
-[개인 사이트](https://joydac.netlify.app/){: .btn .btn--danger}
+[개인 사이트](https://hksn.netlify.app/){: .btn .btn--danger}
 [개인 유튜브](https://www.youtube.com/channel/UCtMPPUYeIc8QlrIx3fFJHVQ){: .btn .btn--danger}
 
