--- a/_posts/2024-2-1-db_1.md
+++ b/_posts/2024-2-1-db_1.md
@@ -37,17 +37,12 @@ author_profile: false
 
 
 ## 2. 스키마 (Schema)
+
 | 스키마 종류 | 내용                                                                                                             |
 | :----- | -------------------------------------------------------------------------------------------------------------- |
 | **외부 스키마** | - 사용자 관점의 스키마 -> 하나의 DB에 여러개의 외부 스키마 존재<br>- 사용자, 프로그램마다 다양한 형태의 논리적 구조로 존재                                    |
 | **개념 스키마** | - 사용자와 DB 관리자 관점의 스키마 / DB의 전체적인 논리적 구조<br>- 일반적으로 하나의 DB에는 하나의 개념 스키마가 존재<br>-> 데이터 개체/관계/제약조건/접근권한/무결성 규칙 명세 |
 | **내부 스키마** | - DB 설계자/개발자 관점의 스키마<br>- 개념 스키마를 물리적 저장장치에 구현하는 방법을 정의<br>-> 물리적 구조 / 내부 레코드의 물리적 순서                          |
-
-## 3. 데이터 독립성
-### 논리적 독립성
-응용 프로그램 영향없이 데이터베이스 논리 구조 변경
-### 물리적 독립성
-응용 프로그램 및 논리 구조 영향없이 데이터의 물리적 구조 변경
 
 
 ## 4. 데이터 언어
@@ -67,6 +62,7 @@ author_profile: false
 | **논리적 모델**  | - 개념적 모델을 컴퓨터가 처리할 수 있는 구조로 표현(관계 모델)<br>- 종속적인 논리 스키마 설계 / 트랜잭션 인터페이스 설계 / 정규화<br>- 논리적 데이터 베이스 구조로 Mapping / 스키마의 평가 및 정제                               |
 | **물리적 모델**  | - 데이터의 실제 저장 방법 및 접근 경로 표현 (레코드 형식 / 순서)<br>- 목표 DBMS 종속적인 물리적 구조 데이터로 변환 / 반정규화<br>- 오브젝트, 접근방법, 인덱스, 뷰 용량 설계 / 트랜잭션 작성<br>-> 저장 레코드의 형식 / 순서 / 접근 경로 설계 |
 | **구현**      | DBMS에서 SQL로 작성한 명령문 실행 후 데이터베이스 실제 생성                                                                                                                     |
+
 ### 데이터 모델링
 현실 내 복잡한 데이터 구조를 단순 / 추상화하여 체계적으로 표현
 
@@ -88,7 +84,7 @@ DB에 저장될 수 있는 실제 데이터의 논리적 제약 조건
 
 ## 8. E-R 다이어그램 표기법
 
-![[Pasted image 20240805170133.png]]
+![db_1]({{site.url}}/assets/images/2024-2-1-db/db_1.png)
 
 ## 9. 관계형 데이터베이스 용어
 - 릴레이션(Relation)이라는 표(Table)로 표현
