데이터베이스 정규화 포스팅

--- a/_posts/2024-2-1-db_1.md
+++ b/_posts/2024-2-1-db_1.md
@@ -1,7 +1,7 @@
 ---
 layout: single
 title:  "1.데이터베이스 기초"
-categories: [database, AI]
+categories: [database]
 tags: [Major, Database]
 toc: true
 author_profile: false
@@ -18,19 +18,23 @@ author_profile: false
 2. 통합 데이터: 최소의 중복과 통제 가능 허용
 3. 저장 데이터: 컴퓨터 매체에 저장된 데이터
 4. 운영 데이터: 주요 기능 수행목적 지속적 데이터
+
 ### 특징
 1. 실시간 접근: 사용자의 데이터 요구 실시간 응답
 2. 계속 변화: 상태반영(데이터 삽입, 삭제, 수정)
 3. 동시 공유: 데이터 동시에 이용/공유
 4. 내용 기반 참조: 내용(값)으로 참조 가능
+
 ### 형태
 1. 정형: 미리 정해진 구조
 2. 반정형: 내용 안에 구조에 대한 설명
 3. 비정형: 정해진 구조가 없음
+
 ### 특성
 #### 범주형 데이터: 종류를 나타내는 값
 1. 명목형 데이터
 2. 순서형 데이터
+
 #### 수치형 데이터: 크기 비교와 연산 가능
 1. 이산형 데이터
 2. 연속형 데이터
@@ -38,11 +42,17 @@ author_profile: false
 
 ## 2. 스키마 (Schema)
 
-| 스키마 종류 | 내용                                                                                                             |
-| :----- | -------------------------------------------------------------------------------------------------------------- |
+| 스키마 종류 | 내용   |
+| :----- | ----- |
 | **외부 스키마** | - 사용자 관점의 스키마 -> 하나의 DB에 여러개의 외부 스키마 존재<br>- 사용자, 프로그램마다 다양한 형태의 논리적 구조로 존재                                    |
 | **개념 스키마** | - 사용자와 DB 관리자 관점의 스키마 / DB의 전체적인 논리적 구조<br>- 일반적으로 하나의 DB에는 하나의 개념 스키마가 존재<br>-> 데이터 개체/관계/제약조건/접근권한/무결성 규칙 명세 |
-| **내부 스키마** | - DB 설계자/개발자 관점의 스키마<br>- 개념 스키마를 물리적 저장장치에 구현하는 방법을 정의<br>-> 물리적 구조 / 내부 레코드의 물리적 순서                          |
+| **내부 스키마** | - DB 설계자/개발자 관점의 스키마<br>- 개념 스키마를 물리적 저장장치에 구현하는 방법을 정의<br>-> 물리적 구조 / 내부 레코드의 물리적 순서     |
+
+## 3. 데이터 독립성
+### 논리적 독립성
+응용 프로그램 영향없이 데이터베이스 논리 구조 변경
+### 물리적 독립성
+응용 프로그램 및 논리 구조 영향없이 데이터의 물리적 구조 변경
 
 
 ## 4. 데이터 언어
